# blackpir

./: CMakeLists.txt  README.md  justfile  pir.cc  pir.h
.github/workflows/: ci.yml
tests/: pir_test.cc
